--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "http-proxy-middleware": "^2.0.6",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.14.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-icons": "^4.10.1",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
